--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<script src="js/script.js"></script>
 	<!-- <script src="https://kit.fontawesome.com/0f586da1fb.js" crossorigin="anonymous"></script> -->
 </head>
-<body onload="goHome()"><!-- so that the home-div displays on load -->
+<body onload="changePage('home-div')"><!-- so that the home-div displays on load -->
 	<div id="fullscreen-background">
 		<video poster autoplay muted loop id="video-background">
 			<source src="video/city.mp4" type="video/mp4">
@@ -20,13 +20,15 @@
 		<div>
 			<div id="nav-links">
 				<!-- must be bumper here for mobile if someone scrolls down -->
-				<a href="javascript:void(0)" onclick="goHome()">Home</a>
-				<a href="javascript:void(0)" onclick="goResume()">Resume</a>
+				<a href="javascript:void(0)" onclick="changePage('home-div')">Home</a>
+				<a href="javascript:void(0)" onclick="changePage('resume-div')">Resume</a>
+				<a href="javascript:void(0)" onclick="changePage('about-div')">About Me</a>
 			</div>
 			<a id="hamburger" href="javascript:void(0)" onclick="toggleMenu()">&#9776;</a>
 		</div>
 	</header>
 	<div id="content">
+		<!------------- home-div ----------------->
 		<div id="home-div" class="content-div">
 			<h2>Front End</h2>
 			<div class="logos">
@@ -54,10 +56,20 @@
 				<img src="images/docker.png" alt="docker logo"></img>
 			</div>
 		</div>
-		<!----------resume ----------->
+		<!----------resume-div ----------->
 		<div id="resume-div" class="content-div">
 			<embed src="resume.pdf" width="500" height="700" alt="pdf"
 				pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+		</div>
+		<!------------- about-div --------------->
+		<div id="about-div" class="content-div">
+			<h2>About Me</h2>
+			<h3>I am a full stack Developer.</h3>
+			<p>My first computer was a PC-compatible Canon manufactured in the late 1980s and I have been in love with computers ever since.</p>
+			<p>I received my Bachelor's Degree (with High Honors) from Lewis University in 2008. My major was Computer Science and my concentration was cyber security. I helped build a computer lab.</p>
+			<p>I'm currently working on my Master's Degree at Lewis University in Computer Science with a concentration in Cyber Security. I am finished with all of my courework and am writing my thesis. My GPA is 3.5</p>
+			<p>I spent several years studying improv, acting, and comedy writing at the Second City Training Center in Chicago, IL. This amazing experience has taught me to listen to other, learn to lead and follow when necessary.</p>
+			<p>I have been either a bartender or cook my entire life. I don't do much bartending anymore, but I still love to cook. I grew up learning about Italian food because my mother is Italian.</p>
 		</div>
 	</div>
 	<!------- sticky footer ---------->
