updated style for video background

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Joe Kelly homepage</title>
+	<meta name="description" content="This is the website for Joe Kelly. I am a full stack web developer based out of the Chicagoland area.">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/script.js"></script>
 	<!-- <script src="https://kit.fontawesome.com/0f586da1fb.js" crossorigin="anonymous"></script> -->
 </head>
 <body onload="changePage('home-div')"><!-- so that the home-div displays on load -->
-	<div id="fullscreen-background">
-		<video poster autoplay muted loop id="video-background">
-			<source src="video/city.mp4" type="video/mp4">
-		</video>
-	</div>
+	<video autoplay muted loop id="video-background">
+		<source src="video/city.mp4" type="video/mp4">
+	</video>
 	<!-- desktop header -->
 	<header>
 		<img src="images/name.svg"></img>
