added poster to movie tag

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,11 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
-	<base href="https://www.joekellyonline.com/" target="_blank">
 	<meta name="author" content="Joe Kelly"></meta>
 	<script src="js/script.js"></script>
 </head>
 <body onload="changePage('home')"><!-- so that the home-div displays on load -->
-	<video autoplay muted loop id="video-background">
+	<video autoplay muted loop id="video-background" poster="images/city.png">
 		<source src="video/city.mp4" type="video/mp4">
 	</video>
 	<!-- desktop header -->
