--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,7 @@
 		<!----------resume-div ----------->
 		<!----- TODO resume does not load on mobile because of flash? ------>
 		<article id="resume" class="content">
-			<embed src="resume.pdf" width="500" height="700" alt="pdf"
-				pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+			<iframe src="docs/resume.pdf" width="500" height="710"></iframe>
 		</article>
 		<!------------- about-div --------------->
 		<article id="about" class="content">
