--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,11 @@
 				<a href="javascript:void(0)" onclick="changePage('resume')">Resume</a>
 				<a href="javascript:void(0)" onclick="changePage('about')">About Me</a>
 			</div>
-			<a id="hamburger" href="javascript:void(0)" onclick="toggleMenu()">&#9776;</a>
+			<div id="hamburger" onclick="toggleMenu()">
+				<span class="layer menu-top"></span>
+				<span class="layer menu-middle"></span>
+				<span class="layer menu-bottom"></span>
+			</div>
 		</nav>
 	</header>
 	<div id="content">
