--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,7 @@
 		<!----- TODO resume does not load on mobile because of flash? ------>
 		<article id="resume" class="content">
 			<iframe src="docs/resume.pdf" width="500" height="710"></iframe>
+			<div>Download my resume <a href="docs/resume.pdf">here</a>, or view in a larger browser window.</div>
 		</article>
 		<!------------- about-div --------------->
 		<article id="about" class="content">
