added mysql to logos

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
 				<img src="images/slim.png" alt="slim logo"></img>
 				<img src="images/php.svg" alt="php logo"></img>
 				<img src="images/composer.png" alt="composer logo"></img>
+				<img src="images/mysql.svg" alt="mysql logo">
 			</div>
 			<h2>Developer Tools</h2>
 			<div class="logos">
