updated img alt text and new resume

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 	</video>
 	<!-- desktop header -->
 	<header id="header">
-		<img src="images/name.svg"></img>
+		<img src="images/name.svg" alt="Joe Kelly logo"></img>
 		<nav>
 			<div id="nav-links">
 				<!-- must be bumper here for mobile if someone scrolls down -->
@@ -68,7 +68,7 @@
 		<!----- TODO resume does not load on mobile because of flash? ------>
 		<article id="resume" class="content">
 			<iframe src="docs/resume.pdf" width="500" height="710"></iframe>
-			<div>Download my resume <a href="docs/resume.pdf">here</a>, or view in a larger browser window.</div>
+			<div>Download <a href="docs/resume.pdf">my resume</a>, or view in a larger browser window.</div>
 		</article>
 		<!------------- about-div --------------->
 		<article id="about" class="content">
