changed webp to png

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 	<script src="js/script.js"></script>
 </head>
 <body onload="changePage('home')"><!-- so that the home-div displays on load -->
-	<video autoplay muted loop id="video-background" poster="images/city.webp">
+	<video autoplay muted loop id="video-background" poster="images/city.png">
 		<source src="video/city.mp4" type="video/mp4">
 	</video>
 	<!-- desktop header -->
@@ -51,7 +51,7 @@
 			<div class="logos">
 				<img src="images/slim.png" alt="slim logo"></img>
 				<img src="images/php.svg" alt="php logo"></img>
-				<img src="images/composer.webp" alt="composer logo"></img>
+				<img src="images/composer.png" alt="composer logo"></img>
 				<img src="images/mysql.svg" alt="mysql logo">
 			</div>
 			<h2>Developer Tools</h2>
@@ -85,10 +85,10 @@
 	<footer>
 		<div>©2020 Joe Kelly</div>
 		<a href="https://github.com/pecuniam1">
-			<img src="images/github.webp" alt="github logo">
+			<img src="images/github.png" alt="github logo">
 		</a>
 		<a href="http://www.linkedin.com/in/thejoekelly">
-			<img src="images/linkedin.webp" alt="github logo">
+			<img src="images/linkedin.png" alt="github logo">
 		</a>
 	</footer>
 </body>
