--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<meta name="author" content="Joe Kelly"></meta>
+	<meta name="theme-color" content="#ffffff"></meta>
 	<script src="js/script.js"></script>
 </head>
 <body onload="changePage('home')"><!-- so that the home-div displays on load -->
