--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Joe Kelly -- Full Stack Developer</title>
 	<meta name="description" content="This is the website for Joe Kelly. I am a full stack web developer based out of the Chicagoland area.">
+	<link rel="preload" href="/fonts/NotoSansJP-Regular.otf" as="font" type="font/woff2" crossorigin> 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
