updated city poster for video to be jpg

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 	<script src="js/script.js"></script>
 </head>
 <body onload="changePage('home')"><!-- so that the home-div displays on load -->
-	<video autoplay muted loop id="video-background" poster="images/city.png">
+	<video autoplay muted loop id="video-background" poster="images/city.jpg">
 		<source src="video/city.mp4" type="video/mp4">
 	</video>
 	<!-- desktop header -->
