--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 			<div class="logos">
 				<img src="images/slim.png" alt="slim logo"></img>
 				<img src="images/php.svg" alt="php logo"></img>
-				<img src="images/composer.png" alt="composer logo"></img>
+				<img src="images/composer.svg" alt="composer logo"></img>
 				<img src="images/mysql.svg" alt="mysql logo">
 			</div>
 			<h2>Developer Tools</h2>
@@ -62,8 +62,8 @@
 				<img src="images/vscode.svg" alt="vscode logo"></img>
 				<img src="images/linux.svg" alt="linux logo"></img>
 				<img src="images/npm.svg" alt="npm logo"></img>
-				<img src="images/bash.png" alt="bash logo"></img>
-				<img src="images/docker.png" alt="docker logo"></img>
+				<img src="images/bash.svg" alt="bash logo"></img>
+				<img src="images/docker.svg" alt="docker logo"></img>
 			</div>
 		</article>
 		<!----------resume-div ----------->
