updated linkedin logo

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
 			<img src="images/github.png" alt="github logo">
 		</a>
 		<a href="http://www.linkedin.com/in/thejoekelly">
-			<img src="images/linkedin.png" alt="github logo">
+			<img src="images/linkedin.svg" alt="github logo">
 		</a>
 	</footer>
 </body>
