--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Joe Kelly -- Full Stack Developer</title>
 	<meta name="description" content="This is the website for Joe Kelly. I am a full stack web developer based out of the Chicagoland area.">
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+	<link rel="preload" href="https://fonts.gstatic.com/s/notosans/v9/o-0IIpQlx3QUlC5A4PNr5TRA.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -13,7 +13,7 @@
 	<link rel="manifest" href="/site.webmanifest">
 	<meta name="author" content="Joe Kelly"></meta>
 	<meta name="theme-color" content="#ffffff"></meta>
-	<script src="js/script.js"></script>
+	<script async src="js/script.js"></script>
 </head>
 <body onload="changePage('home')"><!-- so that the home-div displays on load -->
 	<video autoplay muted loop id="video-background" poster="images/city.jpg">
