--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
 	</div>
 	<!------- sticky footer ---------->
 	<footer>
-		<div>©2020 Joe Kelly</div>
+		<div><p>©2020 Joe Kelly</p></div>
 		<a href="https://github.com/pecuniam1">
 			<img src="images/github.png" alt="github logo">
 		</a>
