added email address to bottom of home page

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,10 @@
 				<img src="images/bash.svg" alt="bash logo"></img>
 				<img src="images/docker.svg" alt="docker logo"></img>
 			</div>
+			<br>
+			<div class="contact">
+				webmaster -at- joekellyonline.com
+			</div>
 		</article>
 		<!----------resume-div ----------->
 		<!----- TODO resume does not load on mobile because of flash? ------>
@@ -83,6 +87,9 @@
 		</article>
 	</div>
 	<!------- sticky footer ---------->
+	<br>
+	<br>
+	<br>
 	<footer>
 		<div><p>©2020 Joe Kelly</p></div>
 		<a href="https://github.com/pecuniam1">
@@ -93,5 +100,20 @@
 		</a>
 	</footer>
 	<script async src="js/script.js"></script>
+	<script>
+	console.log(`%c
+    /$$$$$                           /$$   /$$           /$$ /$$          
+   |__  $$                          | $$  /$$/          | $$| $$          
+      | $$  /$$$$$$   /$$$$$$       | $$ /$$/   /$$$$$$ | $$| $$ /$$   /$$
+      | $$ /$$__  $$ /$$__  $$      | $$$$$/   /$$__  $$| $$| $$| $$  | $$
+ /$$  | $$| $$  \\ $$| $$$$$$$$      | $$  $$  | $$$$$$$$| $$| $$| $$  | $$
+| $$  | $$| $$  | $$| $$_____/      | $$\\  $$ | $$_____/| $$| $$| $$  | $$
+|  $$$$$$/|  $$$$$$/|  $$$$$$$      | $$ \\  $$|  $$$$$$$| $$| $$|  $$$$$$$
+ \\______/  \\______/  \\_______/      |__/  \\__/ \\_______/|__/|__/ \\____  $$
+                                                                 /$$  | $$
+                                                                |  $$$$$$/
+                                                                 \\______/
+`, "color:green");
+	</script>
 </body>
 </html>
