--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,6 @@
 		<article id="contact" class="content">
 			<div class="container">
 				<form>
-
 					<label for="name">Your Name</label>
 					<input type="text" id="name" name="name" placeholder="Your name.." required>
 
@@ -114,9 +113,7 @@
 					<label for="subject">Subject</label>
 					<textarea id="subject" name="subject" placeholder="Write something.."
 						style="height:200px"></textarea>
-
-					<button onclick="postForm()">Click here</button>
-
+					<button type="button" onclick="postForm()">Click here</button>
 				</form>
 			</div>
 		</article>
