--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
 				love to cook. I grew up learning about Italian food because my mother is Italian.</p>
 		</article>
 		<article id="contact" class="content">
-			<form>
+			<form id="contact_form">
 				<label for="name">Your Name (Required)</label>
 				<input type="text" id="name" name="name" placeholder="Enter your name..." required>
 
@@ -112,7 +112,7 @@
 				<label for="subject">What&apos;s Up?</label>
 				<textarea id="subject" name="subject" placeholder="Tell me what's up ..."
 					style="height:100px"></textarea>
-				<button type="button" onclick="postForm()">Click here to submit</button>
+				<button type="submit">Click here to submit</button>
 			</form>
 		</article>
 	</div>
