--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
 				<label for="subject">What&apos;s Up?</label>
 				<textarea id="subject" name="subject" placeholder="Tell me what's up ..."
 					style="height:100px"></textarea>
-				<button type="submit">Click here to submit</button>
+				<button type="button" onclick="postForm()">Click here to submit</button>
 			</form>
 		</article>
 	</div>
