added form reset after submit

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
 				love to cook. I grew up learning about Italian food because my mother is Italian.</p>
 		</article>
 		<article id="contact" class="content">
-			<form id="contact_form">
+			<form id="myForm">
 				<label for="name">Your Name (Required)</label>
 				<input type="text" id="name" name="name" placeholder="Enter your name..." required>
 
