updated phone placeholder

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
 				<input type="text" id="name" name="name" placeholder="Enter your name..." required>
 
 				<label for="phone">Your Phone</label>
-				<input type="tel" id="phone" name="phone" placeholder="Enter your phone number ...">
+				<input type="tel" id="phone" name="phone" placeholder="(XXX) XXX-XXXX">
 				<label for="email">Email Address</label>
 
 				<input type="text" id="email" name="email" placeholder="Enter your email...">
