add valid check to contact form

--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
 				<input type="text" id="email" name="email" placeholder="Enter your email...">
 				<label for="subject">What&apos;s Up?</label>
 				<textarea id="subject" name="subject" placeholder="Tell me what's up ..."
-					style="height:100px"></textarea>
+					style="height:100px" required></textarea>
 				<button type="button" onclick="postForm()">Click here to submit</button>
 			</form>
 		</article>
