--- a/public/index.html
+++ b/public/index.html
@@ -48,29 +48,30 @@
 		<article id="home" class="content">
 			<h2>Front End</h2>
 			<div class="logos">
-				<img src="images/html5.svg" alt="html logo"></img>
-				<img src="images/css3.svg" alt="css logo"></img>
-				<img src="images/scss.svg" alt="scss logo"></img>
-				<img src="images/js.svg" alt="javascript logo"></img>
-				<img src="images/jquery.svg" alt="jquery logo"></img>
-				<img src="images/angularjs.svg" alt="angular js logo"></img>
-				<img src="images/typescript.svg" alt="typescript logo"></img>
+				<img src="images/html5.svg" alt="html logo" title="HTML5"></img>
+				<img src="images/css3.svg" alt="css logo" title="CSS3"></img>
+				<img src="images/scss.svg" alt="scss logo" title="SASS"></img>
+				<img src="images/typescript.svg" alt="typescript logo" title="TypeScript"></img>
+				<img src="images/js.svg" alt="javascript logo" title="JavaScript"></img>
+				<img src="images/pwa.svg" alt="progressive web app logo" title="Progressive Web App">
+				<img src="images/jquery.svg" alt="jquery logo" title="JQuery"></img>
+				<img src="images/angularjs.svg" alt="angular js logo" title="AngularJS"></img>
 			</div>
 			<h2>Back End</h2>
 			<div class="logos">
-				<img src="images/slim.png" alt="slim logo"></img>
-				<img src="images/php.svg" alt="php logo"></img>
-				<img src="images/composer.svg" alt="composer logo"></img>
-				<img src="images/mysql.svg" alt="mysql logo">
+				<img src="images/slim.png" alt="slim logo" title="Slim: A microframework"></img>
+				<img src="images/php.svg" alt="php logo" title="PHP"></img>
+				<img src="images/composer.svg" alt="composer logo" title="Composer"></img>
+				<img src="images/mysql.svg" alt="mysql logo" title="MySQL">
 			</div>
 			<h2>Developer Tools</h2>
 			<div class="logos">
-				<img src="images/git.svg" alt="git logo"></img>
-				<img src="images/vscode.svg" alt="vscode logo"></img>
-				<img src="images/linux.svg" alt="linux logo"></img>
-				<img src="images/npm.svg" alt="npm logo"></img>
-				<img src="images/bash.svg" alt="bash logo"></img>
-				<img src="images/docker.svg" alt="docker logo"></img>
+				<img src="images/git.svg" alt="git logo" title="Git"></img>
+				<img src="images/vscode.svg" alt="vscode logo" title="Visual Studio Code"></img>
+				<img src="images/linux.svg" alt="linux logo" title="Linux"></img>
+				<img src="images/npm.svg" alt="npm logo" title="Node Package Manager"></img>
+				<img src="images/bash.svg" alt="bash logo" title="Bourne Again SHell"></img>
+				<img src="images/docker.svg" alt="docker logo" title="Docker"></img>
 			</div>
 			<br>
 			<div class="contact">
@@ -124,12 +125,14 @@
 		<div>
 			<p>©2020 Joe Kelly</p>
 		</div>
-		<a href="https://github.com/pecuniam1">
-			<img src="images/github.png" alt="github logo">
-		</a>
-		<a href="http://www.linkedin.com/in/thejoekelly">
-			<img src="images/linkedin.svg" alt="github logo">
-		</a>
+		<div>
+			<a href="https://github.com/pecuniam1">
+				<img src="images/github.png" alt="github logo">
+			</a>
+			<a href="http://www.linkedin.com/in/thejoekelly">
+				<img src="images/linkedin.svg" alt="github logo">
+			</a>
+		</div>
 	</footer>
 	<script async src="js/script.js"></script>
 	<script>
