--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 	<link rel="manifest" href="/site.webmanifest">
 	<meta name="author" content="Joe Kelly">
 	</meta>
-	<meta name="theme-color" content="#ffffff">
+	<meta name="theme-color" content="#000000">
 	</meta>
 </head>
 
