updated about me

--- a/public/index.html
+++ b/public/index.html
@@ -91,14 +91,19 @@
 			<p>My first computer was a PC-compatible Canon manufactured in the late 1980s and I have been in love with
 				computers ever since.</p>
 			<p>I received my Bachelor's Degree (with High Honors) from Lewis University in 2008. My major was Computer
-				Science and my concentration was cyber security. I helped build a computer lab.</p>
+				Science and my concentration was cyber security. My Capstone project was helping to build a lab on campus that is still in use.
+				The lab uses a server running VMWare EXSi and a physical rack holding mulitple pieces of enterprise networking components such
+				as switches, routers, etc. This allows students to deploy multiple virtual machines but connect them using
+				real equipment.</p>
 			<p>I'm currently working on my Master's Degree at Lewis University in Computer Science with a concentration
-				in Cyber Security. I am finished with all of my courework and am writing my thesis. My GPA is 3.5</p>
+				in Cyber Security. I am finished with all of my coursework and am writing my thesis. My GPA is 3.5</p>
 			<p>I spent several years studying improv, acting, and comedy writing at the Second City Training Center in
-				Chicago, IL. This amazing experience has taught me to listen to other, learn to lead and follow when
-				necessary.</p>
+				Chicago, IL. This amazing experience has taught me to listen to others, learn to lead and follow when
+				necessary. Corporations such as Microsoft send their employees to the Second City Training Center in order
+				to really embrace team work.</p>
 			<p>I have been either a bartender or cook my entire life. I don't do much bartending anymore, but I still
-				love to cook. I grew up learning about Italian food because my mother is Italian.</p>
+				love to cook. I grew up learning about Italian food because my mother is Italian, but I have embraced a little bit
+				of French and Chinese cooking. I believe in molecular gastronomy and try to elevate everything I cook with some good old science.</p>
 		</article>
 		<article id="contact" class="content">
 			<form id="myForm">
