--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 		content="This is the website for Joe Kelly. I am a full stack web developer based out of the Chicagoland area.">
 	<link rel="preload" href="https://fonts.gstatic.com/s/notosans/v9/o-0IIpQlx3QUlC5A4PNr5TRA.woff2" as="font"
 		type="font/woff2" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -139,7 +139,7 @@
 			</a>
 		</div>
 	</footer>
-	<script async src="js/script.js"></script>
+	<script async src="js/script.min.js"></script>
 	<script>
 		console.log(`%c
     /$$$$$                           /$$   /$$           /$$ /$$          
