--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
 			</a>
 		</div>
 	</footer>
-	<script async src="js/script.min.js"></script>
+	<script async src="js/script.js"></script>
 	<script>
 		console.log(`%c
     /$$$$$                           /$$   /$$           /$$ /$$          
