--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
 <body>
 	<!-- so that the home-div displays on load -->
-	<video autoplay muted loop id="video-background" poster="images/city.jpg">
+	<video autoplay muted loop id="video-background" poster="images/city.webp">
 		<source src="video/city.mp4" type="video/mp4">
 	</video>
 	<!-- desktop header -->
